--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <a href="./pages/portfolioเกี่ยวกับ.html">My Portfolio</a>
     <a href="./bee swarm wiki/home bee.html">wiki week5</a>
   </nav>
+  <h1>Papatpong</h1>
 </body>
 
 </html>.
