--- a/public/bee swarm wiki/Items.html
+++ b/public/bee swarm wiki/Items.html
@@ -161,6 +161,90 @@
         </aside>
 
         <main>
+            <main>
+    <section class="welcome-section">
+        <h2>Welcome to the Bee Swarm Simulator Wiki!</h2>
+        <p>A collaborative community wiki about <span style="color: var(--primary-gold); font-weight: bold;">Bee Swarm Simulator</span>, the bee hive-themed ROBLOX game created by Onett.</p>
+        <p style="font-size: 0.85rem; color: #888;">This wiki can be edited by anyone! We currently have 443,808 edits to 642 articles and 26,935 images.</p>
+        <hr style="border: 0; border-top: 1px solid #eee; margin: 30px 0;">
+    </section>
+
+    <div style="background-color: #1a4d34; border: 1px solid #3a6b51; border-radius: 8px; overflow: hidden; margin-bottom: 40px;">
+        <div style="background-color: #2e7d32; color: white; padding: 10px 20px; font-weight: bold; font-size: 1.2rem;">
+            Home
+        </div>
+
+        <div style="background-color: white; margin: 20px; padding: 10px; text-align: center; border-radius: 4px;">
+            <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/6/6f/Wiki_Banner.png" alt="Banner" style="max-width: 100%; height: auto;">
+            <p style="color: #666; font-size: 0.8rem; font-style: italic; margin-top: 5px;">443,808 edits since March 25, 2018</p>
+        </div>
+
+        <div class="topics-box" style="border-radius: 0; background-color: transparent; border-top: 1px solid #3a6b51;">
+            <h3 style="margin-top: 0; font-size: 1rem; text-transform: uppercase; letter-spacing: 2px;">Game Topics</h3>
+            
+            <div class="topics-grid">
+                <a href="bee wiki.html" class="topic-item">
+                    <img src="./bee/Basic_Bee.webp" class="topic-icon" alt="Bees">
+                    <span>Bees</span>
+                </a>
+                <a href="items.html" class="topic-item">
+                    <img src="./items/Dark_Scythe.webp" class="topic-icon" alt="Items">
+                    <span>Items</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/2/23/Black_Bear_Face.png" class="topic-icon" alt="Bears">
+                    <span>Bears</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/c/c5/Ticket_Shop_Icon.png" class="topic-icon" alt="Shops">
+                    <span>Shops</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a2/Beequip_Icon.png" class="topic-icon" alt="Beequips">
+                    <span>Beequips</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/b/b1/Badge_Icon.png" class="topic-icon" alt="Badges">
+                    <span>Badges</span>
+                </a>
+
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a3/Ticket_Icon.png" class="topic-icon" alt="Codes">
+                    <span>Codes</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/0/0b/Clover_Field_Icon.png" class="topic-icon" alt="Fields">
+                    <span>Fields</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a2/Spider_Icon.png" class="topic-icon" alt="Mobs">
+                    <span>Mobs</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/7/77/Cog_Icon.png" class="topic-icon" alt="Mechanics">
+                    <span>Mechanics</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/6/6f/Sticker_Icon.png" class="topic-icon" alt="Stickers">
+                    <span>Stickers</span>
+                </a>
+                <a href="#" class="topic-item">
+                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/1/1d/Star_Amulet_Icon.png" class="topic-icon" alt="Amulets">
+                    <span>Amulets</span>
+                </a>
+            </div>
+        </div>
+
+        <div style="padding: 20px; border-top: 1px solid #3a6b51; text-align: center;">
+            <h3 style="font-size: 0.9rem; text-transform: uppercase; margin-bottom: 20px;">BSS Community Links</h3>
+            <div style="display: flex; justify-content: center; gap: 30px;">
+                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Official Discord</a>
+                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Twitter (Onett)</a>
+                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Roblox Group</a>
+            </div>
+        </div>
+    </div>
+</main>
             
 
         </main>
