--- a/public/bee swarm wiki/home bee.html
+++ b/public/bee swarm wiki/home bee.html
@@ -147,8 +147,7 @@
 
     <div class="wrapper">
         <aside>
-            <div class="logo" style="font-weight: 800; color: var(--primary-gold); margin-bottom: 40px;">BSS LIBRARY
-            </div>
+            <div class="logo" style="font-weight: 800; color: var(--primary-gold); margin-bottom: 40px;">Bee swarm simulator </div>
             <nav>
                 <ul>
                     <li><a href="home bee.html" style="color: var(--primary-gold);">หน้าหลัก</a></li>
@@ -199,7 +198,7 @@
                     <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/c/c5/Ticket_Shop_Icon.png" class="topic-icon" alt="Shops">
                     <span>Shops</span>
                 </a>
-                <a href="#" class="topic-item">
+                  <a href="#" class="topic-item">
                     <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a2/Beequip_Icon.png" class="topic-icon" alt="Beequips">
                     <span>Beequips</span>
                 </a>
