--- a/public/bee swarm wiki/Items.html
+++ b/public/bee swarm wiki/Items.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <title>Bee Swarm Wiki - Home</title>
     <style>
-        /* --- 1. CSS พื้นฐาน (ใช้เหมือนหน้าผึ้งเป๊ะๆ) --- */
+        /* --- 1. CSS พื้นฐาน --- */
         :root {
             --primary-gold: #c6a000;
             --dark-text: #2c3e50;
             --border-light: #e0e0e0;
             --white: #ffffff;
             --wiki-green: #00361c;
-            /* สีเขียวเข้มแบบในรูป */
+            --header-brown: #575033;
         }
 
         body {
@@ -25,7 +25,7 @@
 
         /* Header */
         .game-header {
-            background-color: #575033;
+            background-color: var(--header-brown);
             background-image: url('https://www.transparenttextures.com/patterns/hexellence.png');
             color: white;
             text-align: center;
@@ -75,15 +75,12 @@
             padding: 40px;
         }
 
-        /* --- 2. ส่วนพิเศษสำหรับหน้า HOME เท่านั้น --- */
-
-        /* กล่องต้อนรับ */
+        /* --- 2. ส่วนพิเศษสำหรับหน้า HOME & TOPICS --- */
         .welcome-section {
             text-align: center;
             margin-bottom: 40px;
         }
 
-        /* Game Topics Grid (กล่องสีเขียว) */
         .topics-box {
             background-color: var(--wiki-green);
             border-radius: 8px;
@@ -95,7 +92,6 @@
         .topics-grid {
             display: grid;
             grid-template-columns: repeat(6, 1fr);
-            /* 6 คอลัมน์ตามรูป */
             gap: 20px;
             margin-top: 30px;
         }
@@ -126,8 +122,105 @@
             font-size: 0.9rem;
         }
 
-        /* Responsive สำหรับหน้าจอเล็ก */
+        /* --- 3. ส่วน Item Cards (ที่สร้างใหม่) --- */
+        .items-section {
+            margin-top: 50px;
+        }
+
+        .section-title {
+            border-bottom: 2px solid var(--wiki-green);
+            padding-bottom: 10px;
+            margin-bottom: 25px;
+            font-size: 1.5rem;
+            color: var(--wiki-green);
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+
+        .items-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            gap: 20px;
+        }
+
+        .item-card {
+            background: white;
+            border: 1px solid var(--border-light);
+            border-radius: 12px;
+            padding: 20px 15px;
+            text-align: center;
+            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .item-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+            border-color: var(--primary-gold);
+        }
+
+        .item-img-container {
+            width: 90px;
+            height: 90px;
+            background: #fdfdfd;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 15px;
+            border: 1px solid #f0f0f0;
+        }
+
+        .item-card img {
+            width: 65px;
+            height: 65px;
+            object-fit: contain;
+        }
+
+        .item-name {
+            font-weight: 800;
+            font-size: 1rem;
+            margin-bottom: 8px;
+            color: #222;
+        }
+
+        .item-type {
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            padding: 3px 12px;
+            border-radius: 20px;
+            background: #f0f0f0;
+            color: #777;
+            font-weight: bold;
+        }
+
+        /* Rarity Borders */
+        .rarity-endgame {
+            border-top: 5px solid #7000ff;
+        }
+
+        .rarity-event {
+            border-top: 5px solid #ff4d4d;
+        }
+
+        /* Responsive */
         @media (max-width: 1000px) {
+            .wrapper {
+                grid-template-columns: 1fr;
+            }
+
+            aside {
+                display: none;
+            }
+
             .topics-grid {
                 grid-template-columns: repeat(3, 1fr);
             }
@@ -147,105 +240,70 @@
 
     <div class="wrapper">
         <aside>
-            <div class="logo" style="font-weight: 800; color: var(--primary-gold); margin-bottom: 40px;">BSS LIBRARY
-            </div>
+            <div class="logo"
+                style="font-weight: 800; color: var(--primary-gold); margin-bottom: 40px; text-transform: uppercase; letter-spacing: 1px;">
+                Bee Swarm Simulator</div>
             <nav>
                 <ul>
-                    <li><a href="home bee.html" style="color: var(--primary-gold);">หน้าหลัก</a></li>
+                    <li><a href="home bee.html">หน้าหลัก</a></li>
                     <li><a href="bee wiki.html">สารานุกรมผึ้ง</a></li>
-                    <li><a href="#">อุปกรณ์ทั้งหมด</a></li>
-                    <li><a href="#">แผนที่ทุ่งหญ้า</a></li>
-                    <li><a href="#">รวมเควสหมี</a></li>
-                </ul>
+                    <li><a href="Items.html">อุปกรณ์ทั้งหมด</a></li>
+                    <li><a href="Quests.html">รวมเควสหมี (Quests)</a></li>
+                    <li><a href="code.html">รหัสโค้ดล่าสุด</a></li>
             </nav>
         </aside>
 
         <main>
-            <main>
-    <section class="welcome-section">
-        <h2>Welcome to the Bee Swarm Simulator Wiki!</h2>
-        <p>A collaborative community wiki about <span style="color: var(--primary-gold); font-weight: bold;">Bee Swarm Simulator</span>, the bee hive-themed ROBLOX game created by Onett.</p>
-        <p style="font-size: 0.85rem; color: #888;">This wiki can be edited by anyone! We currently have 443,808 edits to 642 articles and 26,935 images.</p>
-        <hr style="border: 0; border-top: 1px solid #eee; margin: 30px 0;">
-    </section>
+            < <section class="items-section">
+                <div class="section-title">
+                    <span>★ Featured Items & Tools</span>
+                </div>
 
-    <div style="background-color: #1a4d34; border: 1px solid #3a6b51; border-radius: 8px; overflow: hidden; margin-bottom: 40px;">
-        <div style="background-color: #2e7d32; color: white; padding: 10px 20px; font-weight: bold; font-size: 1.2rem;">
-            Home
-        </div>
+                <div class="items-grid">
+                    <a href="#" class="item-card rarity-endgame">
+                        <div class="item-img-container">
+                            <img src="./bee/Dark_Scythe.webp" alt="Dark Scythe">
+                        </div>
+                        <div class="item-name">Dark Scythe</div>
+                        <div class="item-type" style="background: #e0d4ff; color: #7000ff;">Endgame Tool</div>
+                    </a>
 
-        <div style="background-color: white; margin: 20px; padding: 10px; text-align: center; border-radius: 4px;">
-            <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/6/6f/Wiki_Banner.png" alt="Banner" style="max-width: 100%; height: auto;">
-            <p style="color: #666; font-size: 0.8rem; font-style: italic; margin-top: 5px;">443,808 edits since March 25, 2018</p>
-        </div>
+                    <a href="#" class="item-card rarity-endgame">
+                        <div class="item-img-container">
+                            <img src="./bee/Tide_Popper.webp" alt="Tide Popper">
+                        </div>
+                        <div class="item-name">Tide Popper</div>
+                        <div class="item-type" style="background: #d4e3ff; color: #0052ff;">Endgame Tool</div>
+                    </a>
 
-        <div class="topics-box" style="border-radius: 0; background-color: transparent; border-top: 1px solid #3a6b51;">
-            <h3 style="margin-top: 0; font-size: 1rem; text-transform: uppercase; letter-spacing: 2px;">Game Topics</h3>
-            
-            <div class="topics-grid">
-                <a href="bee wiki.html" class="topic-item">
-                    <img src="./bee/Basic_Bee.webp" class="topic-icon" alt="Bees">
-                    <span>Bees</span>
-                </a>
-                <a href="items.html" class="topic-item">
-                    <img src="./items/Dark_Scythe.webp" class="topic-icon" alt="Items">
-                    <span>Items</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/2/23/Black_Bear_Face.png" class="topic-icon" alt="Bears">
-                    <span>Bears</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/c/c5/Ticket_Shop_Icon.png" class="topic-icon" alt="Shops">
-                    <span>Shops</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a2/Beequip_Icon.png" class="topic-icon" alt="Beequips">
-                    <span>Beequips</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/b/b1/Badge_Icon.png" class="topic-icon" alt="Badges">
-                    <span>Badges</span>
-                </a>
+                    <a href="#" class="item-card">
+                        <div class="item-img-container">
+                            <img src="./bee/Star_Jelly.webp"
+                                alt="Star Jelly">
+                        </div>
+                        <div class="item-name">Star Jelly</div>
+                        <div class="item-type">Material</div>
+                    </a>
 
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a3/Ticket_Icon.png" class="topic-icon" alt="Codes">
-                    <span>Codes</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/0/0b/Clover_Field_Icon.png" class="topic-icon" alt="Fields">
-                    <span>Fields</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a2/Spider_Icon.png" class="topic-icon" alt="Mobs">
-                    <span>Mobs</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/7/77/Cog_Icon.png" class="topic-icon" alt="Mechanics">
-                    <span>Mechanics</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/6/6f/Sticker_Icon.png" class="topic-icon" alt="Stickers">
-                    <span>Stickers</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/1/1d/Star_Amulet_Icon.png" class="topic-icon" alt="Amulets">
-                    <span>Amulets</span>
-                </a>
-            </div>
-        </div>
+                    <a href="#" class="item-card rarity-event">
+                        <div class="item-img-container">
+                            <img src="./bee/Gummy_Mask.webp"
+                                alt="Gummy Mask">
+                        </div>
+                        <div class="item-name">Gummy Mask</div>
+                        <div class="item-type">Equipment</div>
+                    </a>
 
-        <div style="padding: 20px; border-top: 1px solid #3a6b51; text-align: center;">
-            <h3 style="font-size: 0.9rem; text-transform: uppercase; margin-bottom: 20px;">BSS Community Links</h3>
-            <div style="display: flex; justify-content: center; gap: 30px;">
-                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Official Discord</a>
-                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Twitter (Onett)</a>
-                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Roblox Group</a>
-            </div>
-        </div>
-    </div>
-</main>
-            
+                    <a href="#" class="item-card">
+                        <div class="item-img-container">
+                            <img src="./bee/Diamond_Egg.webp"
+                                alt="Diamond Egg">
+                        </div>
+                        <div class="item-name">Diamond Egg</div>
+                        <div class="item-type">Special Egg</div>
+                    </a>
+                </div>
+                </section>
 
         </main>
     </div>
