--- a/public/bee swarm wiki/bee wiki.html
+++ b/public/bee swarm wiki/bee wiki.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="th">
 
 <head>
@@ -208,14 +208,14 @@
 
     <div class="wrapper">
         <aside>
-            <div class="logo">Bee swarm simulator </div>
+            <div class="logo" style="font-weight: 800; color: var(--primary-gold); margin-bottom: 40px;">Bee swarm simulator</div>
             <nav>
                 <ul>
-                    <li><a href="home bee.html">แดชบอร์ดหลัก</a></li>
+                   <li><a href="home bee.html">หน้าหลัก</a></li>
                     <li><a href="bee wiki.html">สารานุกรมผึ้ง</a></li>
-                    <li><a href="#">อุปกรณ์ทั้งหมด</a></li>
-                    <li><a href="#">แผนที่ทุ่งหญ้า</a></li>
-                    <li><a href="#">รวมเควสหมี</a></li>
+                    <li><a href="Items.html">อุปกรณ์ทั้งหมด</a></li>
+                    <li><a href="Quests.html">รวมเควสหมี (Quests)</a></li>
+                    <li><a href="code.html">รหัสโค้ดล่าสุด</a></li>
                 </ul>
             </nav>
         </aside>
