--- a/public/bee swarm wiki/home bee.html
+++ b/public/bee swarm wiki/home bee.html
@@ -3,21 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bee Swarm Wiki - Home</title>
+    <title>Bee Swarm Wiki - หน้าหลัก</title>
     <style>
-        /* --- 1. CSS พื้นฐาน (ใช้เหมือนหน้าผึ้งเป๊ะๆ) --- */
+        /* --- 1. CSS พื้นฐาน & ธีมสีน้ำตาล-ทอง --- */
         :root {
             --primary-gold: #c6a000;
+            --soft-gold: #ffcc00;
+            --header-brown: #575033;
             --dark-text: #2c3e50;
             --border-light: #e0e0e0;
             --white: #ffffff;
-            --wiki-green: #00361c;
-            /* สีเขียวเข้มแบบในรูป */
+            --bg-light: #fcfcfc;
+            --card-bg: #fffbf2;
+            /* สีเหลืองนวลๆ */
         }
 
         body {
             font-family: 'Inter', -apple-system, sans-serif;
-            background-color : #fcfcfc;
+            background-color: var(--bg-light);
             color: var(--dark-text);
             margin: 0;
             line-height: 1.6;
@@ -25,19 +28,37 @@
 
         /* Header */
         .game-header {
-            background-color: #575033;
+            background-color: var(--header-brown);
             background-image: url('https://www.transparenttextures.com/patterns/hexellence.png');
             color: white;
             text-align: center;
-            padding: 40px 20px;
+            padding: 50px 20px;
         }
 
         .game-header h1 {
-            color: #ffcc00;
             margin: 0;
-            font-size: 2.5rem;
+            font-size: 2.8rem;
+            letter-spacing: 3px;
+            color: var(--soft-gold);
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
+
+        .logo-img {
+            width: 90px;
+            margin-bottom: 15px;
+            filter: drop-shadow(0 0 10px rgba(255, 204, 0, 0.5));
+        }
+
+        .logo {
+            font-weight: 800;
+            font-size: 1.2rem;
+            color: var(--primary-gold);
+            margin-bottom: 40px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
 
         /* Layout */
         .wrapper {
@@ -50,6 +71,9 @@
             background: var(--white);
             border-right: 1px solid var(--border-light);
             padding: 30px 20px;
+            position: sticky;
+            top: 0;
+            height: 100vh;
         }
 
         nav ul {
@@ -58,46 +82,53 @@
         }
 
         nav li {
-            margin-bottom: 15px;
+            margin-bottom: 18px;
         }
 
         nav a {
             text-decoration: none;
             color: #666;
             font-weight: 500;
+            transition: 0.2s;
+            font-size: 1rem;
         }
 
-        nav a:hover {
+        nav a:hover,
+        nav a.active {
             color: var(--primary-gold);
+            padding-left: 5px;
         }
 
         main {
-            padding: 40px;
+            padding: 40px 60px;
+            max-width: 1100px;
         }
 
-        /* --- 2. ส่วนพิเศษสำหรับหน้า HOME เท่านั้น --- */
-
-        /* กล่องต้อนรับ */
-        .welcome-section {
-            text-align: center;
-            margin-bottom: 40px;
+        /* --- 2. Topics Section (เปลี่ยนสีจากเขียวเป็นน้ำตาลทอง) --- */
+        .topics-container {
+            background-color: var(--header-brown);
+            border: 2px solid var(--primary-gold);
+            border-radius: 15px;
+            overflow: hidden;
+            margin-bottom: 50px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
         }
 
-        /* Game Topics Grid (กล่องสีเขียว) */
-        .topics-box {
-            background-color: var(--wiki-green);
-            border-radius: 8px;
-            padding: 40px 20px;
+        .topics-header {
+            background-color: var(--primary-gold);
             color: white;
+            padding: 15px 25px;
+            font-weight: 800;
+            font-size: 1.2rem;
             text-align: center;
+            text-transform: uppercase;
         }
 
         .topics-grid {
             display: grid;
             grid-template-columns: repeat(6, 1fr);
-            /* 6 คอลัมน์ตามรูป */
-            gap: 20px;
-            margin-top: 30px;
+            gap: 15px;
+            padding: 30px 20px;
         }
 
         .topic-item {
@@ -105,29 +136,121 @@
             flex-direction: column;
             align-items: center;
             text-decoration: none;
-            color: white;
-            transition: 0.2s;
+            transition: 0.3s;
         }
 
         .topic-item:hover {
-            transform: scale(1.1);
+            transform: translateY(-5px);
         }
 
         .topic-icon {
-            width: 80px;
-            height: 80px;
+            width: 65px;
+            height: 65px;
             object-fit: contain;
             margin-bottom: 10px;
         }
 
         .topic-item span {
-            color: #ffcc00;
+            color: var(--soft-gold);
             font-weight: bold;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
         }
 
-        /* Responsive สำหรับหน้าจอเล็ก */
+        /* --- 3. Featured Items Cards --- */
+        .section-title {
+            border-left: 5px solid var(--primary-gold);
+            padding-left: 15px;
+            margin-bottom: 30px;
+            font-size: 1.6rem;
+            color: var(--header-brown);
+            font-weight: 800;
+        }
+
+        .items-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 25px;
+            margin-bottom: 60px;
+        }
+
+        .item-card {
+            background: var(--white);
+            border: 1px solid var(--border-light);
+            border-radius: 12px;
+            padding: 20px;
+            text-align: center;
+            transition: 0.3s;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .item-card:hover {
+            border-color: var(--primary-gold);
+            background: var(--card-bg);
+            transform: scale(1.03);
+        }
+
+        .item-img-container {
+            height: 80px;
+            margin-bottom: 15px;
+        }
+
+        .item-img-container img {
+            max-height: 100%;
+            object-fit: contain;
+        }
+
+        .item-name {
+            display: block;
+            font-weight: bold;
+            font-size: 1.1rem;
+            margin-bottom: 5px;
+        }
+
+        .rarity-tag {
+            font-size: 0.7rem;
+            font-weight: bold;
+            padding: 3px 10px;
+            border-radius: 5px;
+            background: #eee;
+            color: #777;
+        }
+
+        /* --- 4. Game Description (เนื้อหายาว) --- */
+        .game-description {
+            background: var(--white);
+            padding: 40px;
+            border-radius: 15px;
+            border: 1px solid var(--border-light);
+            line-height: 1.8;
+            color: #444;
+        }
+
+        .game-description h2 {
+            color: var(--header-brown);
+            margin-top: 0;
+        }
+
+        .game-description p {
+            margin-bottom: 20px;
+            text-indent: 30px;
+        }
+
+        .highlight-gold {
+            color: var(--primary-gold);
+            font-weight: bold;
+        }
+
+        /* Responsive */
         @media (max-width: 1000px) {
+            .wrapper {
+                grid-template-columns: 1fr;
+            }
+
+            aside {
+                display: none;
+            }
+
             .topics-grid {
                 grid-template-columns: repeat(3, 1fr);
             }
@@ -139,111 +262,115 @@
 
     <header class="game-header">
         <div class="overlay">
-            <img src="./bee/Basic_Bee.webp" alt="Logo" style="width: 80px; margin-bottom: 10px;">
+            <img src="./bee/Basic_Bee.webp" alt="Logo" class="logo-img">
             <h1>BEE SWARM SIMULATOR WIKI</h1>
-            <p>Welcome to the collaborative community wiki!</p>
+            <p>สารานุกรมข้อมูลครบถ้วนสำหรับเหล่า Beekeepers</p>
         </div>
     </header>
 
     <div class="wrapper">
         <aside>
-            <div class="logo" style="font-weight: 800; color: var(--primary-gold); margin-bottom: 40px;">Bee swarm simulator </div>
+            <div class="logo" style="font-weight: 800; color: var(--primary-gold); margin-bottom: 40px;">Bee swarm
+                simulator</div>
             <nav>
                 <ul>
-                    <li><a href="home bee.html" style="color: var(--primary-gold);">หน้าหลัก</a></li>
+                    <li><a href="home bee.html">หน้าหลัก</a></li>
                     <li><a href="bee wiki.html">สารานุกรมผึ้ง</a></li>
-                    <li><a href="#">อุปกรณ์ทั้งหมด</a></li>
-                    <li><a href="#">แผนที่ทุ่งหญ้า</a></li>
-                    <li><a href="#">รวมเควสหมี</a></li>
+                    <li><a href="Items.html">อุปกรณ์ทั้งหมด</a></li>
+                    <li><a href="Quests.html">รวมเควสหมี (Quests)</a></li>
+                    <li><a href="code.html">รหัสโค้ดล่าสุด</a></li>
                 </ul>
             </nav>
         </aside>
 
         <main>
-           <main>
-    <section class="welcome-section">
-        <h2>Welcome to the Bee Swarm Simulator Wiki!</h2>
-        <p>A collaborative community wiki about <span style="color: var(--primary-gold); font-weight: bold;">Bee Swarm Simulator</span>, the bee hive-themed ROBLOX game created by Onett.</p>
-        <p style="font-size: 0.85rem; color: #888;">This wiki can be edited by anyone! We currently have 443,808 edits to 642 articles and 26,935 images.</p>
-        <hr style="border: 0; border-top: 1px solid #eee; margin: 30px 0;">
-    </section>
-
-    <div style="background-color: #1a4d34; border: 1px solid #3a6b51; border-radius: 8px; overflow: hidden; margin-bottom: 40px;">
-        <div style="background-color: #2e7d32; color: white; padding: 10px 20px; font-weight: bold; font-size: 1.2rem;">
-            Home
-        </div>
-
-        <div style="background-color: white; margin: 20px; padding: 10px; text-align: center; border-radius: 4px;">
-            <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/6/6f/Wiki_Banner.png" alt="Banner" style="max-width: 100%; height: auto;">
-            <p style="color: #666; font-size: 0.8rem; font-style: italic; margin-top: 5px;">443,808 edits since March 25, 2018</p>
-        </div>
-
-        <div class="topics-box" style="border-radius: 0; background-color: transparent; border-top: 1px solid #3a6b51;">
-            <h3 style="margin-top: 0; font-size: 1rem; text-transform: uppercase; letter-spacing: 2px;">Game Topics</h3>
-            
-            <div class="topics-grid">
-                <a href="bee wiki.html" class="topic-item">
-                    <img src="./bee/Basic_Bee.webp" class="topic-icon" alt="Bees">
-                    <span>Bees</span>
-                </a>
-                <a href="items.html" class="topic-item">
-                    <img src="./items/Dark_Scythe.webp" class="topic-icon" alt="Items">
-                    <span>Items</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/2/23/Black_Bear_Face.png" class="topic-icon" alt="Bears">
-                    <span>Bears</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/c/c5/Ticket_Shop_Icon.png" class="topic-icon" alt="Shops">
-                    <span>Shops</span>
-                </a>
-                  <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a2/Beequip_Icon.png" class="topic-icon" alt="Beequips">
-                    <span>Beequips</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/b/b1/Badge_Icon.png" class="topic-icon" alt="Badges">
-                    <span>Badges</span>
-                </a>
-
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a3/Ticket_Icon.png" class="topic-icon" alt="Codes">
-                    <span>Codes</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/0/0b/Clover_Field_Icon.png" class="topic-icon" alt="Fields">
-                    <span>Fields</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/a/a2/Spider_Icon.png" class="topic-icon" alt="Mobs">
-                    <span>Mobs</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/7/77/Cog_Icon.png" class="topic-icon" alt="Mechanics">
-                    <span>Mechanics</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/6/6f/Sticker_Icon.png" class="topic-icon" alt="Stickers">
-                    <span>Stickers</span>
-                </a>
-                <a href="#" class="topic-item">
-                    <img src="https://vignette.wikia.nocookie.net/bee-swarm-simulator/images/1/1d/Star_Amulet_Icon.png" class="topic-icon" alt="Amulets">
-                    <span>Amulets</span>
-                </a>
+            <div class="topics-container">
+                <div class="topics-header">Quick Navigation</div>
+                <div class="topics-grid">
+                    <a href="bee wiki.html" class="topic-item">
+                        <img src="./bee/Basic_Bee.webp" class="topic-icon" alt="">
+                        <span>Bees</span>
+                    </a>
+                    <a href="Items.html" class="topic-item">
+                        <img src="./bee/Tide_Popper.webp" class="topic-icon" alt="">
+                        <span>Items</span>
+                    </a>
+                    <a href="#" class="topic-item">
+                        <img src="./bee/Black.webp" class="topic-icon" alt="">
+                        <span>Bears</span>
+                    </a>
+                    <a href="#" class="topic-item">
+                        <img src="./bee/maxresdefault.jpg" class="topic-icon" alt="">
+                        <span>Map</span>
+                    </a>
+                    </a>
+                </div>
             </div>
-        </div>
 
-        <div style="padding: 20px; border-top: 1px solid #3a6b51; text-align: center;">
-            <h3 style="font-size: 0.9rem; text-transform: uppercase; margin-bottom: 20px;">BSS Community Links</h3>
-            <div style="display: flex; justify-content: center; gap: 30px;">
-                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Official Discord</a>
-                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Twitter (Onett)</a>
-                <a href="#" style="color: #b2ff59; text-decoration: none; font-size: 0.85rem;">Roblox Group</a>
+            <h2 class="section-title">อุปกรณ์และไอเทมแนะนำ</h2>
+            <div class="items-grid">
+                <div class="item-card">
+                    <div class="item-img-container"><img src="./bee/Dark_Scythe.webp" alt=""></div>
+                    <span class="item-name">Dark Scythe</span>
+                    <span class="rarity-tag" style="background: #ffebee; color: #d32f2f;">Endgame Red</span>
+                </div>
+                <div class="item-card">
+                    <div class="item-img-container"><img src="./bee/Tide_Popper.webp" alt=""></div>
+                    <span class="item-name">Tide Popper</span>
+                    <span class="rarity-tag" style="background: #e3f2fd; color: #1976d2;">Endgame Blue</span>
+                </div>
+                <div class="item-card">
+                    <div class="item-img-container"><img src="./bee/Gummy_Mask.webp" alt=""></div>
+                    <span class="item-name">Gummy Mask</span>
+                    <span class="rarity-tag">Top Tier Mask</span>
+                </div>
+                <div class="item-card">
+                    <div class="item-img-container"><img
+                            src="./bee/Diamond_Egg.webp"
+                            alt=""></div>
+                    <span class="item-name">Diamond Egg</span>
+                    <span class="rarity-tag" style="color: #00bcd4;">Rare Egg</span>
+                </div>
             </div>
-        </div>
-    </div>
-</main>
+
+            <article class="game-description">
+                <h2>เกี่ยวกับ Bee Swarm Simulator</h2>
+                <p>
+                    <span class="highlight-gold">Bee Swarm Simulator</span> คือเกมแนว Simulation
+                    ที่โดดเด่นและได้รับความนิยมอย่างสูงบนแพลตฟอร์ม <span class="highlight-gold">Roblox</span> พัฒนาโดย
+                    Onett
+                    ตัวเกมจะนำผู้เล่นเข้าสู่โลกแห่งการเลี้ยงผึ้งที่ไม่ได้มีแค่การเก็บน้ำหวานธรรมดา
+                    แต่เต็มไปด้วยการวางแผน การทำเควส และการสะสมผึ้งสายพันธุ์ต่างๆ ที่มีความสามารถเฉพาะตัว
+                </p>
+
+                <p>
+                    เป้าหมายหลักของผู้เล่นคือการสร้าง "ฝูงผึ้ง" (Swarm) ที่แข็งแกร่งที่สุด
+                    โดยเริ่มจากผึ้งพื้นฐานตัวเดียว แล้วค่อยๆ ขยายรังด้วยการฟักไข่เพื่อรับผึ้งระดับ <span
+                        class="highlight-gold">Rare, Epic, Legendary</span> ไปจนถึงระดับ <span
+                        class="highlight-gold">Mythic</span> ที่หายากสุดๆ
+                    ผึ้งแต่ละตัวจะช่วยผู้เล่นเก็บเกสรดอกไม้ (Pollen) จากทุ่งหญ้าต่างๆ เพื่อนำกลับมาผลิตเป็นน้ำผึ้ง
+                    (Honey) ซึ่งเป็นเงินสกุลหลักในการซื้ออุปกรณ์ใหม่ๆ เช่น กระเป๋าเก็บเกสรที่มีความจุมากขึ้น
+                    หรือเครื่องมือเก็บเกสรที่มีประสิทธิภาพสูงขึ้น
+                </p>
+
+                <p>
+                    เสน่ห์ที่ทำให้หลายคนเรียกเกมนี้ว่า <span style="color:red; font-weight:bold;">"เกมนรก"</span>
+                    คือระบบการเล่นที่ต้องใช้ความอดทนสูงมาก (Grinding) โดยเฉพาะเมื่อเข้าสู่ช่วงท้ายเกม (Endgame)
+                    ที่การคราฟต์ไอเทมระดับสูงอย่าง <span class="highlight-gold">Dark Scythe</span> หรือ <span
+                        class="highlight-gold">Tide Popper</span> ต้องใช้ทรัพยากรมหาศาลที่ต้องเก็บสะสมเป็นเวลาหลายเดือน
+                    รวมไปถึงการทำเควสจากเหล่าหมี (Bears) เช่น Black Bear, Mother Bear หรือ Science Bear
+                    ที่มีความยากขึ้นเรื่อยๆ แต่ผลตอบแทนก็คุ้มค่าเสมอ
+                </p>
+
+                <p>
+                    นอกจากนี้ เกมยังมีระบบ "สีของรัง" (Hive Colors) ที่แบ่งออกเป็นสาย <span style="color: #d32f2f;">Red
+                        Hive</span>, <span style="color: #1976d2;">Blue Hive</span> และ <span style="color: #666;">White
+                        Hive</span>
+                    ซึ่งผู้เล่นต้องเลือกอัปเกรดผึ้งและอุปกรณ์ให้สอดคล้องกันเพื่อรีดประสิทธิภาพการทำน้ำผึ้งให้ออกมาได้สูงที่สุด
+                    ทำให้ Bee Swarm Simulator ไม่ใช่แค่เกมคลิกไปเรื่อยๆ
+                    แต่เป็นเกมวางแผนกลยุทธ์เชิงลึกที่ครองใจผู้เล่นทั่วโลกมาอย่างยาวนาน
+                </p>
+            </article>
         </main>
     </div>
 
