--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <a href="./pages/profile.html">My Profile</a>
     <a href="./pages/week2-1.html">Weekly Assignment</a>
     <a href="./pages/portfolioเกี่ยวกับ.html">My Portfolio</a>
-    <a href="./bee swarm wiki/home bee.html">wiki week5</a>
+    <a href="./bee swarm wiki/homebee.html">wiki week5</a>
   </nav>
   <h1>Papatpong</h1>
 </body>
 
-</html>.
+</html>
